# eriksync

./: .gitignore  Cargo.toml  build.rs
src/: cli.rs  main.rs
src/eriksync/: mod.rs
src/eriksync/config/: mod.rs  node.rs  target.rs
src/rsync_command/: mod.rs
src/utils/: mod.rs
