[package]
name = "eriksync"
version = "0.1.2"
authors = ["user <user@xapekcim.io>"]
description = "A utility that allows you to synchronize your data between multiple machines via rsync."

build = "build.rs"

[dependencies]
serde = "1.0.15"
serde_derive = "1.0.15"
serde_json = "1.0.3"
clap = "2.26.2"
app_dirs = "1.1.1"


[build-dependencies]
clap = "2.26.2"

