[package]
name = "eriksync"
version = "0.1.4"
authors = ["user <user@xapekcim.io>"]
description = "A utility that allows you to synchronize your data between multiple machines via rsync."

[dependencies]
errln = "0.1.0"
serde = "1.0.15"
serde_derive = "1.0.15"
serde_json = "1.0.3"
clap = "2.26.2"
app_dirs = "1.1.1"

[build-dependencies]
clap = "2.26.2"

